# Graduation-Project

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt  毕业设计选题.md  规划.md
data/chroma_db/: chroma.sqlite3
docs/: cpt.md  glm的建议.md  install_rocm_7.2.4.sh  kimi的建议.md  revert_rocm_to_ubuntu.sh  wenti.md  临时提示词_下一步计划.md  必须手动学习的地方.md  改进.md  方法.md  过程.md
docs/_archive/: kimi的建议_20260628.md  wenti_20260719.md
docs/论文/: 大纲.md  第1章_绪论.md  第5章_训练主线.md
experiments/: utils.py
experiments/exp_01_basic_scan/: exp_01_report.md  run_experiment.py
experiments/exp_01_basic_scan/results/: results.baseline.deepseek-coder-v2-16b.json  results.deepseek-coder-v2-16b.final.json  results.gemma4-12b.final.json  results.json  results.model-comparison.deepseek-coder-v2-16b.test5.json  results.prompt-engineering.deepseek-coder-v2-16b.json  results.qwen2.5-coder-14b.final.json  results.qwen2.5-coder-7b.json
experiments/exp_02_baseline_tools/: README.md  exp_02_report.md  run_baseline.py
experiments/exp_03_rag_knowledge/: exp_03_report.md  run_rag_experiment.py
experiments/exp_04_hard_samples/: exp_04_report.md  generate_report.py  rerun_fix_samples.py  rerun_p15_fix.py  run_ablation_and_topk.sh  run_experiment.py  run_rag_experiment.py  run_v2_qwen7b_all.sh  run_v3_multi_model.sh  run_v3_qwen7b_all.sh
experiments/exp_05_prompt_ablation/: exp_05_report.md  run_ablation.py
graduation_project/: chroma_manager.py  code_slicer.py  llm_client.py  prompts.py  schema.py
src/: __init__.py  chroma_manager.py  llm_client.py  prompts.py  schema.py
(+386 files in other folders)
